# Arduino-AVR-CMake

./: CMakeLists.txt  README.md  blink.c  blink.cpp
cmake/: arduino_core.cmake  arduino_upload.cmake  avr_flags.cmake  avr_hex.cmake
cmake/toolchain/: avr.toolchain.cmake
